# celestia

./: README.md  orbit.sh
client/: package.json  pnpm-lock.yaml
client/src/app/: layout.tsx  page.tsx
client/src/app/_sections/: Controls.tsx
client/src/components/: Navigation.tsx  ServerStatus.tsx  WebSocketProvider.tsx
client/src/lib/: opcode.ts
docs/: 2025-09-18.md  2025-09-19.md  2025-09-20.md
plugin/: .gitignore  README.md  build.gradle.kts
plugin/src/main/java/io/github/nicdgonzalez/celestia/: CelestiaPlugin.java  PlayerJoined.java  ServerStatusUpdate.java
plugin/src/main/resources/: plugin.yml
server/: Cargo.toml
server/src/: main.rs  opcode.rs  state.rs  varint.rs
server/src/routes/: mod.rs
server/src/routes/api/: gateway.rs  mod.rs  status.rs
server/src/routes/api/server/: mod.rs  start.rs  status.rs  stop.rs
server/src/routes/callback/: mod.rs  player_joined.rs  player_left.rs  status.rs
