[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros", "ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
colored = "3.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
void = "1.0.2"
